samples/_failures_safe/1761092715_02da4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0258619b.c: In function ‘main’:
./samples/SAFE/__tmp_0258619b.c:167:5: error: expected identifier or ‘(’ at end of input
  167 |     for (int
      |     ^~~
./samples/SAFE/__tmp_0258619b.c:167:5: error: expected declaration or statement at end of input
